fix background buttons

--- a/src/style.css
+++ b/src/style.css
@@ -273,13 +273,13 @@ div.top {
 
 .button--secondary,
 .input--submit {
-  background: transparent;
+  background: var(--white);
   color: var(--bleu);
   border: var(--bleu) solid 2px;
 }
 
 .button--primary:hover {
-  background: transparent;
+  background: var(--white);
   color: var(--bleu);
 }
 
